--- a/src/pages/AboutUs/components/CircularCard/CircularCard.css
+++ b/src/pages/AboutUs/components/CircularCard/CircularCard.css
@@ -70,7 +70,7 @@
 /* ======================= MEDIA QUERIES ======================== */
 
 /* Large Screens (Above 1200px) */
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
     .circular_card_container {
         min-height: 450px; /* Increase height for larger screens */
     }
@@ -81,11 +81,12 @@
     }
 
     .circular_card_container h3 {
-        font-size: 28px; /* Larger font size */
+        font-size: 30px; /* Larger font size */
     }
 
     .circular_card_container p {
-        font-size: 18px; /* Larger font size */
+        height: auto;
+        font-size: 22px; /* Larger font size */
     }
 }
 
@@ -101,11 +102,11 @@
     }
 
     .circular_card_container h3 {
-        font-size: 22px; /* Adjust font size */
+        font-size: 30px; /* Adjust font size */
     }
 
     .circular_card_container p {
-        font-size: 15px; /* Adjust font size */
+        font-size: 24px; /* Adjust font size */
     }
 }
 
@@ -125,7 +126,7 @@
     }
 
     .circular_card_container p {
-        font-size: 14px; /* Adjust font size */
+        font-size: 24px; /* Adjust font size */
     }
 }
 
