--- a/src/pages/OurProgram/components/BroadCard/BroadCard.css
+++ b/src/pages/OurProgram/components/BroadCard/BroadCard.css
@@ -2,7 +2,7 @@
     margin: 20px auto;
     width: 80%;
     max-width: 1000px; /* Prevents too much stretching on large screens */
-    height: 230px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,12 +26,12 @@
 .broad_title {
     margin-bottom: 20px;
     color: #F27A0A;
-    font-size: 36px;
+    font-size: 26px;
 }
 
 /* Content */
 .broad_content {
-    font-size: 24px;
+    font-size: 20px;
     color: #041D60;
 }
 
@@ -39,14 +39,14 @@
 @media screen and (min-width: 1200px) {
     .broad_card {
         width: 60%;
-        padding: 30px;
+        padding: 10px;
         max-width: 900px;
     }
     .broad_title {
-        font-size: 40px;
+        font-size: 30px;
     }
     .broad_content {
-        font-size: 26px;
+        font-size: 20px;
     }
     .card_img {
         height: 150px;
@@ -68,10 +68,10 @@
     .broad_content {
         font-size: 22px;
     }
-    .card_img {
+    /* .card_img {
         height: 140px;
         width: 140px;
-    }
+    } */
 }
 
 /* Small screens (Mobile devices, up to 767px) */
@@ -94,13 +94,13 @@
     .broad_content {
         font-size: 20px;
     }
-    .card_img {
+    /* .card_img {
         height: 80px;
         width: 80px;
         display: block;
         justify-content: center;
         margin: 0 auto;
-    }
+    } */
 }
 
 
@@ -116,10 +116,10 @@
     .broad_content {
         font-size: 16px;
     }
-    .card_img {
+    /* .card_img {
         height: 80px;
         width: 80px;
-    }
+    } */
 }
 
 /* Very small screens (Tiny mobile screens, up to 320px) */
@@ -134,8 +134,8 @@
     .broad_content {
         font-size: 14px;
     }
-    .card_img {
+    /* .card_img {
         height: 70px;
         width: 70px;
-    }
+    } */
 }
