--- a/src/pages/OurProgram/components/Card/Card.css
+++ b/src/pages/OurProgram/components/Card/Card.css
@@ -1,15 +1,18 @@
 .sub_Card {
-    width: 280px;
-    height: 250px;
-    padding: 5px 0;
+    width: 300px;
+    height: auto;
     margin: 20px 30px 30px 30px;
-    box-shadow: 0px 0px 20px 3px rgba(0, 0, 0, 0.5);
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 10px 20px;
+    text-align: center;
+    /* box-shadow: 0px 0px 20px 3px rgba(0, 0, 0, 0.5); */
     transition: ease-in-out 0.2s;
-    
+
 
 }
 
-.sub_Card:hover{
+.sub_Card:hover {
     transform: scale(1.1);
 }
 
@@ -44,14 +47,15 @@
 } */
 
 @media (max-width: 768px) {
-    .sub_Card{
+    .sub_Card {
         margin: 15px;
         margin-top: 60px;
     }
 }
 
-.sub_button{
+.sub_button {
     text-align: center;
     background-color: #041D60;
-    color: white;;
+    color: white;
+    ;
 }
