--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -290,6 +290,12 @@
     .tab_contents {
         padding: 5px;
     }
+    .i_title {
+        font-size: 10px;
+        line-height: 1.2;
+        -webkit-line-clamp: 2;
+        max-height: 2.4em;
+    }
 
     .tab_img {
         width: 100%;
@@ -324,6 +330,16 @@
         width: 100%;
         height: 160px;
     }
+    .i_title {
+        font-size: 12px;
+        line-height: 1.2; /* Adjust the spacing between lines */
+        display: -webkit-box;
+        -webkit-line-clamp: 2; /* Limit the text to 2 lines */
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-height: 2.4em; /* Ensures two lines based on line-height */
+    }
 
     .tab_contents h3 {
         font-size: 14px;
@@ -344,13 +360,15 @@
 }
 @media (min-width: 340px) and (max-width: 394px) {
     
-    .i_title{
-       font-size: 15px !important;
+    .i_title {
+        font-size: 11px !important;
+        max-height: 2.4em;
     }
   }
 @media (min-width: 0px) and (max-width: 340px) {
     
-    .i_title{
-       font-size: 12px !important;
+    .i_title {
+        font-size: 9px !important;
+        max-height: 2.4em;
     }
   }
