--- a/src/pages/OurProgram/components/Testimonial/Testimonial.css
+++ b/src/pages/OurProgram/components/Testimonial/Testimonial.css
@@ -1,70 +1,1 @@
-.testimonial_wrapper {
-    width: 100%;
-    height: auto; /* Adjust height as needed */
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .testimonial_container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px; /* Adjust the spacing */
-    height: auto;
-    max-height: 400px;
-  }
-  
-  .testimonial_row {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-right: 20px;
-    flex-wrap: wrap;
-    animation: lineScroll 3s ease-in-out infinite; /* Controls each row's movement */
-  }
-  
-  @keyframes lineScroll {
-    0% {
-      transform: translateY(100%);
-      opacity: 0;
-    }
-    10% {
-      opacity: 1;
-    }
-    90% {
-      opacity: 1;
-    }
-    100% {
-      transform: translateY(-100%);
-      opacity: 0;
-    }
-  }
-  
-  /* Pause animation on hover */
-  .testimonial_wrapper:hover .testimonial_row {
-    animation-play-state: paused;
-  }
-  
-  .testimonial_card {
-    width: 300px; /* Adjust width */
-    height: auto; /* Adjust height */
-    background: #fff;
-    border-radius: 10px;
-    -webkit-box-shadow: 5px 5px 37px -5px rgba(0,0,0,0.75);
-    -moz-box-shadow: 5px 5px 37px -5px rgba(0,0,0,0.75);
-    box-shadow: 5px 5px 37px -5px rgba(0,0,0,0.75);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    text-align: center;
-  }
-  @media (max-width: 990px) {
-   
-    
-  }
-  
+/*  */
