--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -23,7 +23,7 @@
     font-size: 34px;
 }
 .title_tag h2 i{
-    font-size: 36px;
+    font-size: 30px;
 }
 
 
@@ -291,7 +291,7 @@
         padding: 5px;
     }
     .i_title {
-        font-size: 10px;
+        font-size: 14px;
         line-height: 1.2;
         -webkit-line-clamp: 2;
         max-height: 2.4em;
@@ -331,7 +331,7 @@
         height: 160px;
     }
     .i_title {
-        font-size: 12px;
+        font-size: 14px;
         line-height: 1.2; /* Adjust the spacing between lines */
         display: -webkit-box;
         -webkit-line-clamp: 2; /* Limit the text to 2 lines */
@@ -361,14 +361,22 @@
 @media (min-width: 340px) and (max-width: 394px) {
     
     .i_title {
-        font-size: 11px !important;
+        font-size: 13px !important;
         max-height: 2.4em;
     }
   }
 @media (min-width: 0px) and (max-width: 340px) {
     
     .i_title {
-        font-size: 9px !important;
+        font-size: 12px !important;
+        max-height: 2.4em;
+    }
+  }
+
+  @media (min-width: 394px) and (max-width: 794px) {
+    
+    .i_title {
+        font-size: 15px !important;
         max-height: 2.4em;
     }
   }
