--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -373,6 +373,13 @@
     }
   }
 
+  @media (max-width: 360px) {
+    .i_title {
+        font-size: 26px !important;
+        max-height: 2.5em;
+    }
+  }
+
   @media (min-width: 394px) and (max-width: 594px) {
     
     .i_title {
@@ -383,8 +390,8 @@
   @media (min-width: 595px) and (max-width: 794px) {
     
     .i_title {
-        font-size: 25px !important;
-        max-height: 2.7em;
+        font-size: 28px !important;
+        max-height: 2.9em;
         margin-bottom: 30px;
     }
   }
