--- a/src/pages/AboutUs/components/CircularCard/CircularCard.css
+++ b/src/pages/AboutUs/components/CircularCard/CircularCard.css
@@ -110,6 +110,11 @@
     }
 }
 
+@media (max-width: 600px) {
+    .circular_card_container h3 {
+        font-size: 20px; /* Adjust font size */
+    }
+}
 /* Small Tablets & Large Phones */
 @media (max-width: 768px) {
     .circular_card_container {
@@ -122,11 +127,11 @@
     }
 
     .circular_card_container h3 {
-        font-size: 20px; /* Adjust font size */
+        font-size: 24px; /* Adjust font size */
     }
 
     .circular_card_container p {
-        font-size: 24px; /* Adjust font size */
+        font-size: 20px; /* Adjust font size */
     }
 }
 @media (max-width: 480px) {
