--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -331,8 +331,9 @@
         height: 160px;
     }
     .i_title {
-        font-size: 14px;
+        font-size: 18px !important;
         line-height: 1.2; /* Adjust the spacing between lines */
+        height: fit-content;
         display: -webkit-box;
         -webkit-line-clamp: 2; /* Limit the text to 2 lines */
         -webkit-box-orient: vertical;
@@ -365,6 +366,14 @@
         max-height: 2.4em;
     }
   }
+
+  @media (min-width: 360px) {
+    .i_title {
+        font-size: 13px !important;
+        max-height: 2.4em;
+        max-width: 2.8em;
+    }
+  }
 @media (min-width: 0px) and (max-width: 340px) {
     
     .i_title {
@@ -384,8 +393,8 @@
   @media (min-width: 595px) and (max-width: 794px) {
     
     .i_title {
-        font-size: 28px !important;
-        max-height: 2.7em;
+        font-size: 27px !important;
+        max-height: 2.9em;
         margin-bottom: 30px;
     }
   }
