--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -30,6 +30,10 @@
         padding: 0 10px;
         margin-bottom: 30px;
     }
+
+    .contact_title {
+        margin-left: 40px;
+    }
 }
 
 .privacy_btn {
@@ -63,6 +67,10 @@
 @media (min-width:360px) {
     .form_tab{
         margin-bottom: -40px;
+    }
+    .contact_title {
+       margin-left: 5px;
+       font-size: 34px;
     }
 }
 
