--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -64,13 +64,14 @@
     border: 2px solid #041D60;
 }
 
-@media (min-width:360px) {
+@media (max-width:360px) {
     .form_tab{
         margin-bottom: -40px;
     }
     .contact_title {
-       margin-left: 5px;
+       margin-left: 5px !important;
        font-size: 34px;
+
     }
 }
 
