--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -375,7 +375,13 @@
     }
   }
 
-  
+  @media (min-width: 394px) {
+    
+    .i_title {
+        font-size: 18px !important;
+        max-height: 2.5em;
+    }
+  }
 
   @media (min-width: 394px) and (max-width: 430px) {
     
@@ -388,7 +394,7 @@
   @media (min-width: 431px) and (max-width: 594px) {
     
     .i_title {
-        font-size: 25px !important;
+        font-size: 18px !important;
         max-height: 2.5em;
     }
   }
