--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -331,7 +331,7 @@
         height: 160px;
     }
     .i_title {
-        font-size: 14px;
+        font-size: 18px !important;
         line-height: 1.2; /* Adjust the spacing between lines */
         display: -webkit-box;
         -webkit-line-clamp: 2; /* Limit the text to 2 lines */
@@ -367,7 +367,7 @@
   }
 
  
-@media (min-width: 0px) and (max-width: 340px) {
+/* @media (min-width: 0px) and (max-width: 340px) {
     
     .i_title {
         font-size: 12px !important;
@@ -381,12 +381,12 @@
         font-size: 18px !important;
         max-height: 2.5em;
     }
-  }
+  } */
 
-  @media (min-width: 394px) and (max-width: 430px) {
+  @media (min-width: 394px) and (max-width: 431px) {
     
     .i_title {
-        font-size: 18px !important;
+        font-size: 17px !important;
         max-height: 2.5em;
     }
   }
@@ -394,7 +394,7 @@
   @media (min-width: 431px) and (max-width: 594px) {
     
     .i_title {
-        font-size: 18px !important;
+        font-size: 20px !important;
         max-height: 2.5em;
     }
   }
