--- a/src/pages/components/Footer/Footer.css
+++ b/src/pages/components/Footer/Footer.css
@@ -1,7 +1,9 @@
+
 .Footer{
     background-color:  #041D60;
     color: white;
     font-size: 20px;
+
 }
 .Footer h6{
     padding: 20px 0px 30px 10px;
@@ -18,4 +20,10 @@ a{
     text-decoration: none !important;
     color: white !important;
 }
+a:hover{
+    cursor: pointer;
+}
 
+p:hover{
+    cursor: pointer;
+}
