--- a/src/pages/AboutUs/components/Card/Card.css
+++ b/src/pages/AboutUs/components/Card/Card.css
@@ -1,6 +1,6 @@
 .about_us_card .card-body-1 {
     width: 100%;
-    height: 250px;
+    height: 250px !important;
     margin-top: -20px;
     display: flex;
     flex-direction: column;
