--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -357,6 +357,9 @@
         align-items: center;
         text-align: center;
     }
+    .content{
+        margin-top: 0px;
+    }
 }
 @media (min-width: 340px) and (max-width: 394px) {
     
