--- a/src/pages/AboutUs/components/Card/Card.css
+++ b/src/pages/AboutUs/components/Card/Card.css
@@ -223,3 +223,47 @@
         font-size: 10px;
     }
 }
+/* Extra Extra Small Devices (less than 300px) */
+@media (max-width: 299px) {
+    .about_us_card {
+        width: 98%;
+        max-width: 250px;
+        padding: 5px;
+        border-radius: 18px;
+    }
+
+    .about_us_card .card-body-1 {
+        height: 170px;
+        padding: 6px;
+    }
+
+    .card_content h3 {
+        font-size: 12px;
+    }
+
+    .card_paragraph h6 {
+        font-size: 9px;
+    }
+}
+/* Ultra Small Devices (less than 240px) */
+@media (max-width: 239px) {
+    .about_us_card {
+        width: 98%;
+        max-width: 220px;
+        padding: 4px;
+        border-radius: 15px;
+    }
+
+    .about_us_card .card-body-1 {
+        height: 150px;
+        padding: 5px;
+    }
+
+    .card_content h3 {
+        font-size: 10px;
+    }
+
+    .card_paragraph h6 {
+        font-size: 8px;
+    }
+}
