--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -376,15 +376,8 @@
         font-size: 12px !important;
         max-height: 2.4em;
     }
-  }
+  }*/
 
-  @media (min-width: 394px) {
-    
-    .i_title {
-        font-size: 18px !important;
-        max-height: 2.5em;
-    }
-  } */
 
   @media (min-width: 394px) and (max-width: 431px) {
     
@@ -409,3 +402,35 @@
         margin-bottom: 30px;
     }
   }
+  
+  @media (max-width: 340px) {
+    
+    .i_title {
+        font-size: 14px !important;
+        max-height: 2.5em;
+    }
+  } 
+
+  @media (min-width: 430px) and (max-width: 463px){
+    
+    .i_title {
+        font-size: 18px !important;
+        max-height: 2.5em;
+    }
+  } 
+
+  @media (min-width: 594px) and (max-width: 617px){
+    
+    .i_title {
+        font-size: 25px !important;
+        max-height: 2.5em;
+    }
+  } 
+
+  @media (min-width: 617px) and (max-width: 639px){
+    
+    .i_title {
+        font-size: 22px !important;
+        max-height: 2.5em;
+    }
+  } 
