--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -434,3 +434,40 @@
         max-height: 2.5em;
     }
   } 
+@media (min-width:768px) and (max-width:999px){
+    .tab_contents {
+        padding: 15px;
+    }
+
+    .tab_img {
+        width: 100%;
+        height: 250px;
+        
+    }
+
+    .tab_contents h3 {
+        font-size: 22px;
+        line-height: 35px;
+        text-align: justify;
+    }
+
+    .tab_content_paragraph {
+        font-size: 20px;
+        line-height: 35px;
+        width: 400px;
+        text-align: justify;
+    }
+
+    .title_tag h2 {
+        font-size: 24px;
+    }
+
+    .tab_container {
+        padding: 10px;
+    }
+
+    .tab_title {
+        font-size: 1rem;
+        margin: 0 15px;
+    }
+}
