--- a/src/pages/OurProgram/components/Card/Card.css
+++ b/src/pages/OurProgram/components/Card/Card.css
@@ -59,3 +59,10 @@
     color: white;
     ;
 }
+@media (min-width: 992px) and (max-width: 1024px) {
+    .sub_Card {
+        justify-content: center;
+        gap: 100px;
+        width: 280px;
+    }
+}
