--- a/src/pages/components/Footer/Footer.css
+++ b/src/pages/components/Footer/Footer.css
@@ -1,12 +1,12 @@
 
-.Footer{
+.footer{
     background-color:  #041D60;
     color: white;
     font-size: 20px;
     padding: 20px 10px !important;
 
 }
-.Footer h6{
+.footer h6{
     padding: 20px 0px 30px 10px;
     font-size: 24px
 }
