--- a/src/pages/AboutUs/components/Card/Card.css
+++ b/src/pages/AboutUs/components/Card/Card.css
@@ -45,6 +45,9 @@
     transform: scale(1.1);
     transition: all 0.5s ;
 }
+#whycard:hover{
+   border: 2.5px dotted #041D60;
+}
 
 
 /* ======================= MEDIA QUERIES ======================== */
