--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -39,7 +39,7 @@
     max-height: calc(1.4em * 2); 
     word-break: break-word; 
     padding: 5px; 
-    font-size: 24px !important;
+    font-size: 30px ;
   }
   
 
@@ -134,6 +134,11 @@
     .title_tag h2 {
         font-size: 38px;
     }
+
+    .tab_title{
+        font-size: 24px;
+        margin: 0 20px;
+    }
 }
 
 /* Standard Desktops & MacBook Pro */
@@ -159,6 +164,11 @@
 
     .title_tag h2 {
         font-size: 34px;
+    }
+
+    .tab_title{
+        font-size: 24px;
+        margin: 0 20px;
     }
 }
 
@@ -186,6 +196,11 @@
     .title_tag h2 {
         font-size: 30px;
     }
+
+    .tab_title{
+        font-size: 24px;
+        margin: 0 20px;
+    }
 }
 
 /* iPads & Small Tablets */
@@ -211,6 +226,11 @@
 
     .title_tag h2 {
         font-size: 28px;
+    }
+
+    .tab_title{
+        font-size: 24px;
+        margin: 0 20px;
     }
 }
 
@@ -247,7 +267,7 @@
     }
 
     .tab_title {
-        font-size: 1rem;
+        font-size: 18px;
         margin: 0 15px;
     }
 }
@@ -276,6 +296,11 @@
     .title_tag h2 {
         font-size: 22px;
     }
+
+    .tab_title{
+        font-size: 24px;
+        margin: 0 20px;
+    }
 }
 
 /* Mobile Phones (Android & iPhones) */
@@ -301,6 +326,11 @@
 
     .title_tag h2 {
         font-size: 20px;
+    }
+
+    .tab_title{
+        font-size: 24px;
+        margin: 0 20px;
     }
 }
 
@@ -333,9 +363,14 @@
     }
 
     .title_tag h2 {
-        font-size: 14.5px;
+        font-size: 20px;
         width: fit-content;
         margin-left: 10px;
+    }
+
+    .tab_title{
+        font-size: 24px;
+        margin: 0 20px;
     }
 
 }
@@ -385,6 +420,11 @@
     .content {
         margin-top: 0px;
     }
+
+    .tab_title{
+        font-size: 24px;
+        margin: 0 20px;
+    }
 }
 
 @media (min-width: 340px) and (max-width: 394px) {
@@ -392,6 +432,11 @@
     .i_title {
         font-size: 18px !important;
         max-height: 2.4em;
+    }
+
+    .tab_title{
+        font-size: 24px;
+        margin: 0 20px;
     }
 }
 
@@ -436,6 +481,8 @@
         font-size: 14px !important;
         max-height: 2.5em;
     }
+
+
 }
 
 @media (min-width: 430px) and (max-width: 463px) {
@@ -495,7 +542,7 @@
     }
 
     .tab_title {
-        font-size: 1rem;
+        font-size: 18px;
         margin: 0 15px;
     }
 }
